docker/intro-k8s/k8s/svc-monapp.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-monapp-helloworld
  namespace: <###namespace###>
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: monapp-helloworld
    tier: frontend
  clusterIP: None
