docker/intro-k8s/k8s/ingress-monapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monapp-helloworld
  namespace: <###namespace###>
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - <###host###>
    secretName: secret-monapp-helloworld
  rules:
  # host rule will route traffic when the hostname requested matches
  - host: <###host###>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-monapp-helloworld
            port:
              number: 80
